log
Mon 06 May 2024 11:36:58 PM UTC: 
 tests:  1|8
total_score: 0/70
42b9628
Thu 09 May 2024 12:57:47 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|8
total_score: 0/70
360c70b
Thu 09 May 2024 12:58:48 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:48:5: error: expected identifier or ‘(’ before ‘return’
   48 |     return NULL;
      |     ^~~~~~
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
ced0990
Thu 09 May 2024 12:58:55 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
d8a6ccb
Thu 09 May 2024 12:59:09 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
5ad9687
Thu 09 May 2024 01:00:29 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:15: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a8f9d98
Thu 09 May 2024 01:03:38 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:15: error: unused variable ‘new’ [-Werror=unused-variable]
   60 |     TreeNode *new = createTreeNode(key, value);
      |               ^~~
treemap.c:51:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2603e75
Thu 09 May 2024 01:06:22 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8e47fbc
Thu 09 May 2024 01:11:07 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
treemap.c: In function ‘minimum’:
treemap.c:69:22: error: ‘TreeNode’ has no member named ‘root’
   69 |     if(x == NULL || x->root == NULL) return NULL;
      |                      ^~
Compilation failed
9fe526f
Thu 09 May 2024 01:11:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
Compilation failed
ad62ae1
